--- a/application/views/scss/components/_product-card.scss
+++ b/application/views/scss/components/_product-card.scss
@@ -460,7 +460,7 @@
     position: absolute;
     text-transform: uppercase;
     top: 50%;
-    z-index: 1;
+    z-index: 2;
     font-weight: 600;
     text-align: center;
     transform: translateY(-50%);
